# pyprojv2

./: .gitignore  README.md
libraries/hellower/: README.md  pyproject.toml
libraries/hellower/src/hellower/: hellower.py
libraries/hellower/tests/: test_hellower.py
libraries/mathmad/: pyproject.toml
libraries/mathmad/src/mathmad/: fibonacci.py
libraries/mathmad/src/mathmad/model/: abssum.py
libraries/mathmad/tests/: test_fibonacci.py
pyprojv2/: README.md  pyproject.toml
pyprojv2/src/pyprojv2/: __main__.py
pyprojv2/tests/: test_main.py
